# dino_wm

./: .gitignore  README.md  config_utils.py  configs.py  download_data.sh  environment.yaml  inference.py  main.py  plan.py  plan_granular.py  plan_pusht.py  plan_vjepa2.py  preprocessor.py  pyproject.toml  run.sh  train.py  train_granular.py  train_pusht.py  train_vjepa2_world_model.py  utils.py  visualize_planning.py  visualize_trajectories.py  watch_agent.py
conf/: plan_point_maze.yaml  plan_vjepa2.yaml  train_local.yaml
conf/decoder/: vjepa2_conv.yaml  vjepa2_patch.yaml
conf/encoder/: vjepa2.yaml
conf/env/: pusht.yaml
conf/planner/: mpc_cem.yaml
conf/predictor/: vjepa2_st_transformer.yaml
conf/train/: vjepa2_world_model.yaml
datasets/: clip_dataset.py  deformable_env_dset.py  point_maze_dset.py  pusht_dset.py  traj_dset.py  wall_dset.py
metrics/: image_metrics.py
minimal/: README.md  __init__.py  cem.py  collect_random.py  convert_pointmaze_data.py  dataset_npz.py  min_dinov2.py  plan_min.py  requirements.txt  test_shapes.py  train_min.py  transition.py
minimal/envs/: pointmaze.py
models/: dino.py  dummy.py  proprio.py  visual_world_model.py  vit.py  vjepa2_world_model.py
models/decoder/: transposed_conv.py  vjepa2_decoder.py
models/dynamics/: __init__.py  st_transformer.py
models/encoder/r3m/: __init__.py
models/encoders/: __init__.py  vjepa2_encoder.py
planning/: costs.py  mpc.py  vjepa2_mpc.py
tests/: test_masks_and_shapes.py  test_planning_costs.py  test_vjepa2_encoder.py
