[project]
name = "dino-wm"
version = "0.1.0"
description = "DINO-WM: World Models on Pre-trained Visual Features enable Zero-shot Planning"
authors = [
    {name = "Gaoyue Zhou", email = "gaoyue.zhou@nyu.edu"},
    {name = "Hengkai Pan", email = "hengkai.pan@nyu.edu"},
    {name = "Yann LeCun", email = "yann@cs.nyu.edu"},
    {name = "Lerrel Pinto", email = "lerrel@cs.nyu.edu"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "einops>=0.6.0",
    "accelerate>=0.20.0",
    "wandb>=0.15.0",
    "tqdm>=4.64.0",
    "pillow>=9.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "gym>=0.21.0",
    "mujoco-py>=2.1.0",
    "pybullet>=3.2.0",
    "pymunk>=6.4.0",
    "pygame>=2.1.0",
    "pyglet>=1.5.0",
    "scipy>=1.9.0",
    "shapely>=1.8.0",
    "submitit>=1.4.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "gdown>=4.6.0",
    "pybind11[global]>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]
